# python-clean-architecture-sample

./: .gitignore  LICENSE  README.md  pyproject.toml
src/domain/: __init__.py  entites.py  errors.py  value_objects.py
src/domain/entities/: __init__.py  booking.py  resource.py
src/domain/repositories/: __init__.py  booking.py  database.py  notification.py
tests/: test_domain.py
