[project]
name = "python-clean-architecture-sample"
version = "0.1.0"
description = "Campus Resource Booking: A Reference Implementation of Clean Architecture and Vertical Slice Design"
authors = [
    {name = "manitreasure1",email = "manitreasure1@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "sqlmodel (>=0.0.38,<0.0.39)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
mypy = "^1.20.0"

